--- a/config/gtk-3.0/colors.css
+++ b/config/gtk-3.0/colors.css
@@ -3,19 +3,19 @@
 * Generated with Matugen
 */
 
-@define-color accent_color #ffafd5;
-@define-color accent_fg_color #3d0027;
-@define-color accent_bg_color #ffafd5;
-@define-color window_bg_color #1e100b;
-@define-color window_fg_color #f9ddd3;
-@define-color headerbar_bg_color #1e100b;
-@define-color headerbar_fg_color #f9ddd3;
-@define-color popover_bg_color #1e100b;
-@define-color popover_fg_color #f9ddd3;
-@define-color view_bg_color #1e100b;
-@define-color view_fg_color #f9ddd3;
-@define-color card_bg_color #1e100b;
-@define-color card_fg_color #f9ddd3;
+@define-color accent_color #85cfff;
+@define-color accent_fg_color #001e2e;
+@define-color accent_bg_color #85cfff;
+@define-color window_bg_color #13121c;
+@define-color window_fg_color #e4e0ef;
+@define-color headerbar_bg_color #13121c;
+@define-color headerbar_fg_color #e4e0ef;
+@define-color popover_bg_color #13121c;
+@define-color popover_fg_color #e4e0ef;
+@define-color view_bg_color #13121c;
+@define-color view_fg_color #e4e0ef;
+@define-color card_bg_color #13121c;
+@define-color card_fg_color #e4e0ef;
 @define-color sidebar_bg_color @window_bg_color;
 @define-color sidebar_fg_color @window_fg_color;
 @define-color sidebar_border_color @window_bg_color;
