--- a/config/swaync/colors.css
+++ b/config/swaync/colors.css
@@ -3,103 +3,103 @@
 * Generated with Matugen
 */
 
-    @define-color background #1e100b;
+    @define-color background #13121c;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #3d2d26;
+    @define-color inverse_on_surface #302f3a;
 
-    @define-color inverse_primary #94416f;
+    @define-color inverse_primary #00658e;
 
-    @define-color inverse_surface #f9ddd3;
+    @define-color inverse_surface #e4e0ef;
 
-    @define-color on_background #f9ddd3;
+    @define-color on_background #e4e0ef;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #5b113f;
+    @define-color on_primary #00344c;
 
-    @define-color on_primary_container #ffd8e8;
+    @define-color on_primary_container #c7e7ff;
 
-    @define-color on_primary_fixed #3d0027;
+    @define-color on_primary_fixed #001e2e;
 
-    @define-color on_primary_fixed_variant #772956;
+    @define-color on_primary_fixed_variant #004c6c;
 
-    @define-color on_secondary #521d3b;
+    @define-color on_secondary #00344c;
 
-    @define-color on_secondary_container #ffd8e8;
+    @define-color on_secondary_container #c7e7ff;
 
-    @define-color on_secondary_fixed #380725;
+    @define-color on_secondary_fixed #001e2e;
 
-    @define-color on_secondary_fixed_variant #6d3352;
+    @define-color on_secondary_fixed_variant #004c6c;
 
-    @define-color on_surface #f9ddd3;
+    @define-color on_surface #e4e0ef;
 
-    @define-color on_surface_variant #e7beae;
+    @define-color on_surface_variant #c7c4dc;
 
-    @define-color on_tertiary #552008;
+    @define-color on_tertiary #2d2960;
 
-    @define-color on_tertiary_container #ffdbce;
+    @define-color on_tertiary_container #e3dfff;
 
-    @define-color on_tertiary_fixed #370e00;
+    @define-color on_tertiary_fixed #17124a;
 
-    @define-color on_tertiary_fixed_variant #71361c;
+    @define-color on_tertiary_fixed_variant #434078;
 
-    @define-color outline #ad897b;
+    @define-color outline #918ea5;
 
-    @define-color outline_variant #5d4035;
+    @define-color outline_variant #464559;
 
-    @define-color primary #ffafd5;
+    @define-color primary #85cfff;
 
-    @define-color primary_container #772956;
+    @define-color primary_container #004c6c;
 
-    @define-color primary_fixed #ffd8e8;
+    @define-color primary_fixed #c7e7ff;
 
-    @define-color primary_fixed_dim #ffafd5;
+    @define-color primary_fixed_dim #85cfff;
 
     @define-color scrim #000000;
 
-    @define-color secondary #fdb0d4;
+    @define-color secondary #93cdf6;
 
-    @define-color secondary_container #6d3352;
+    @define-color secondary_container #004c6c;
 
-    @define-color secondary_fixed #ffd8e8;
+    @define-color secondary_fixed #c7e7ff;
 
-    @define-color secondary_fixed_dim #fdb0d4;
+    @define-color secondary_fixed_dim #93cdf6;
 
     @define-color shadow #000000;
 
-    @define-color source_color #dd7142;
+    @define-color source_color #1c1a3a;
 
-    @define-color surface #1e100b;
+    @define-color surface #13121c;
 
-    @define-color surface_bright #47352f;
+    @define-color surface_bright #393843;
 
-    @define-color surface_container #2b1c16;
+    @define-color surface_container #1f1e29;
 
-    @define-color surface_container_high #362620;
+    @define-color surface_container_high #2a2934;
 
-    @define-color surface_container_highest #42312a;
+    @define-color surface_container_highest #35343f;
 
-    @define-color surface_container_low #271812;
+    @define-color surface_container_low #1b1a25;
 
-    @define-color surface_container_lowest #180b06;
+    @define-color surface_container_lowest #0e0d17;
 
-    @define-color surface_dim #1e100b;
+    @define-color surface_dim #13121c;
 
-    @define-color surface_tint #ffafd5;
+    @define-color surface_tint #85cfff;
 
-    @define-color surface_variant #5d4035;
+    @define-color surface_variant #464559;
 
-    @define-color tertiary #ffb598;
+    @define-color tertiary #c5c0ff;
 
-    @define-color tertiary_container #71361c;
+    @define-color tertiary_container #434078;
 
-    @define-color tertiary_fixed #ffdbce;
+    @define-color tertiary_fixed #e3dfff;
 
-    @define-color tertiary_fixed_dim #ffb598;
+    @define-color tertiary_fixed_dim #c5c0ff;
 
