--- a/config/swaync/colors.css
+++ b/config/swaync/colors.css
@@ -3,103 +3,103 @@
 * Generated with Matugen
 */
 
-    @define-color background #13121c;
+    @define-color background #0f141c;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #302f3a;
+    @define-color inverse_on_surface #2c313a;
 
-    @define-color inverse_primary #00658e;
+    @define-color inverse_primary #006875;
 
-    @define-color inverse_surface #e4e0ef;
+    @define-color inverse_surface #dee2ef;
 
-    @define-color on_background #e4e0ef;
+    @define-color on_background #dee2ef;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #00344c;
+    @define-color on_primary #00363d;
 
-    @define-color on_primary_container #c7e7ff;
+    @define-color on_primary_container #9cefff;
 
-    @define-color on_primary_fixed #001e2e;
+    @define-color on_primary_fixed #001f24;
 
-    @define-color on_primary_fixed_variant #004c6c;
+    @define-color on_primary_fixed_variant #004f58;
 
-    @define-color on_secondary #00344c;
+    @define-color on_secondary #00363d;
 
-    @define-color on_secondary_container #c7e7ff;
+    @define-color on_secondary_container #9eeffe;
 
-    @define-color on_secondary_fixed #001e2e;
+    @define-color on_secondary_fixed #001f24;
 
-    @define-color on_secondary_fixed_variant #004c6c;
+    @define-color on_secondary_fixed_variant #004f58;
 
-    @define-color on_surface #e4e0ef;
+    @define-color on_surface #dee2ef;
 
-    @define-color on_surface_variant #c7c4dc;
+    @define-color on_surface_variant #bdc7dc;
 
-    @define-color on_tertiary #2d2960;
+    @define-color on_tertiary #05305f;
 
-    @define-color on_tertiary_container #e3dfff;
+    @define-color on_tertiary_container #d5e3ff;
 
-    @define-color on_tertiary_fixed #17124a;
+    @define-color on_tertiary_fixed #001b3c;
 
-    @define-color on_tertiary_fixed_variant #434078;
+    @define-color on_tertiary_fixed_variant #244777;
 
-    @define-color outline #918ea5;
+    @define-color outline #8791a5;
 
-    @define-color outline_variant #464559;
+    @define-color outline_variant #3d4758;
 
-    @define-color primary #85cfff;
+    @define-color primary #50d8ed;
 
-    @define-color primary_container #004c6c;
+    @define-color primary_container #004f58;
 
-    @define-color primary_fixed #c7e7ff;
+    @define-color primary_fixed #9cefff;
 
-    @define-color primary_fixed_dim #85cfff;
+    @define-color primary_fixed_dim #50d8ed;
 
     @define-color scrim #000000;
 
-    @define-color secondary #93cdf6;
+    @define-color secondary #82d3e2;
 
-    @define-color secondary_container #004c6c;
+    @define-color secondary_container #004f58;
 
-    @define-color secondary_fixed #c7e7ff;
+    @define-color secondary_fixed #9eeffe;
 
-    @define-color secondary_fixed_dim #93cdf6;
+    @define-color secondary_fixed_dim #82d3e2;
 
     @define-color shadow #000000;
 
-    @define-color source_color #1c1a3a;
+    @define-color source_color #263956;
 
-    @define-color surface #13121c;
+    @define-color surface #0f141c;
 
-    @define-color surface_bright #393843;
+    @define-color surface_bright #343943;
 
-    @define-color surface_container #1f1e29;
+    @define-color surface_container #1b2029;
 
-    @define-color surface_container_high #2a2934;
+    @define-color surface_container_high #252a33;
 
-    @define-color surface_container_highest #35343f;
+    @define-color surface_container_highest #30353e;
 
-    @define-color surface_container_low #1b1a25;
+    @define-color surface_container_low #171c24;
 
-    @define-color surface_container_lowest #0e0d17;
+    @define-color surface_container_lowest #090e17;
 
-    @define-color surface_dim #13121c;
+    @define-color surface_dim #0f141c;
 
-    @define-color surface_tint #85cfff;
+    @define-color surface_tint #50d8ed;
 
-    @define-color surface_variant #464559;
+    @define-color surface_variant #3d4758;
 
-    @define-color tertiary #c5c0ff;
+    @define-color tertiary #a7c8ff;
 
-    @define-color tertiary_container #434078;
+    @define-color tertiary_container #244777;
 
-    @define-color tertiary_fixed #e3dfff;
+    @define-color tertiary_fixed #d5e3ff;
 
-    @define-color tertiary_fixed_dim #c5c0ff;
+    @define-color tertiary_fixed_dim #a7c8ff;
 
