--- a/config/swaync/style.css
+++ b/config/swaync/style.css
@@ -1,6 +1,6 @@
 /* Colors */
 
-@import 'colors.css';
+@import '../../.cache/wallpaper-theme/colors.css';
 @define-color background @background;
 @define-color groupbackground @background;
 @define-color buttoncolor @secondary;
