--- a/config/wlogout/style.css
+++ b/config/wlogout/style.css
@@ -3,20 +3,23 @@
 window {
     font-size:15pt;
     font-family: "SF Pro Display Bold";
-    color: @on_surface; /* text */
+    outline-style: none;
     background-color: rgba(0, 0, 0, 0.8);
+
 }
 
 button {
     background-repeat: no-repeat;
     background-position: center;
     background-size: 20%;
-    background-color: rgba(200, 220, 255, 0);
+    color: @primary; /* text */
+    background-color: transparent;
     animation: gradient_f 10s ease-in infinite;
     transition: all 0.3s cubic-bezier(.55, 0.0, .28, 1.682), box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
     border-radius: 80px;
-	border:0px;
+	
 	outline-style: none;
+    border:0px;
 }
 
 
@@ -26,7 +29,7 @@ button:hover, button:focus {
     background-size: 50%;
     font-weight: bold;    
     margin: 30px;
-
+    border:0px;
 }
 
 /* Adjust the size of the icon or content inside the button */
