--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -19,7 +19,8 @@ em: relevent for the parent element
 
 */
 
-@import '../../.cache/wallpaper-theme/colors.css';
+@import '../../.cache/wal/waybar-colors.css';
+
 
 /* ============ Animations ============ */
 @keyframes blink {
@@ -30,17 +31,19 @@ em: relevent for the parent element
 
 /* ============ Base Settings ============ */
 * {
-  font-family: "JetBrainsMono Nerd Font", monospace;
+  font-family: "JetBrainsMono Nerd Font";
   font-size: 1rem;
 
 }
 
 /* ============ Waybar Container ============ */
 window#waybar {
-    background-color: @surface;
-    color: @on_surface;
+    background-color: @background;
+    color: @foreground;
      /* Optional subtle line */
 }
+
+
 
 
 
@@ -74,8 +77,8 @@ window#waybar {
 #idle_inhibitor:hover {
     margin: 0 0.7em;
     border-radius: 0em;
-    background: @surface_container_highest;
-    color: @on_surface;
+    background: @cursor;
+    color: @background;
     transition:
         margin 0.6s ease,
         border-radius 0.5s ease;
@@ -84,7 +87,7 @@ window#waybar {
 /* Power button specific hover */
 #custom-power:hover {
 margin: 0 0.7em;
-  color: @error;
+  color: @cursor;
       transition:
         margin 0.6s ease,
         border-radius 0.5s ease;
@@ -92,48 +95,48 @@ margin: 0 0.7em;
 
 /* ============ Tooltip ============ */
 tooltip {
-  background-color: @surface;
-  border: 0.1rem solid @tertiary;
+  background-color: @color0;
+  border: 0.1rem solid @color3;
   border-radius: 0.7rem;
 }
 tooltip label {
-  color: @on_surface;
+  color: @color7;
   padding: 0.3rem;
 }
 
 /* ============ Workspaces ============ */
 #workspaces button {
-  color: @on_surface;
+  color: @foreground;
 }
 #workspaces button label {
   letter-spacing: 0; /* Keeps icons tight */
 }
 #workspaces button.active {
-  background: @primary;
-  color: @on_primary;
+  background: @foreground;
+  color: @background;
   border-radius: 0;
 }
 #workspaces button.urgent {
-  background-color: @error;
+  background-color: @color1;
 }
 
 /* ============ Idle Inhibitor ============ */
 #idle_inhibitor.activated {
-  background: @primary;
-  color: @on_primary;
+  background: @color2;
+  color: @color15;
 }
 
 /* ============ Temperature ============ */
 #temperature.critical {
-  background-color: @error;
+  background-color: @color1;
 }
 
 /* ============ Privacy Indicators ============ */
 #privacy-item.screenshare,
 #custom-camera.active,
 #privacy-item.audio-in {
-  background-color: @error;
-  color: @on_error;
+  background-color: @cursor;
+  color: @background;
   animation: blink 0.5s steps(12) infinite alternate;
 }
 
@@ -149,16 +152,16 @@ tooltip label {
 
 
 menu {
-    background-color: @surface;
-    border: 0.1rem solid @tertiary;
+    background-color: @color0;
+    border: 0.1rem solid @color3;
     border-radius: 0.7em;
-    color: @on_surface;
+    color: @color7;
     padding: 0.3rem;
 }
 
 #tray menu menuitem:hover {
-  background: @primary_fixed_dim;
-  color: @on_primary;
+  background: @color3;
+  color: @background;
 	border-radius: 0.35em;
 }
 
@@ -169,42 +172,42 @@ menu {
 }
 
 #power-profiles-daemon.performance {
-  background-color: @error;
-  color: @on_error;
+  background-color: @color1;
+  color: @color15;
 }
 
 #power-profiles-daemon.balanced {
-  background-color: @primary;
-  color: @on_primary;
+  background-color: @color6;
+  color: @color15;
 }
 
 #power-profiles-daemon.power-saver {
-  background-color: @tertiary;
-  color: @on_tertiary;
+  background-color: @cursor;
+  color: @background;
 }
 
 /* ============ Battery ============ */
 #battery.warning:not(.charging) {
-  color: @error;
-  background-color: @on-error;
+  color: @color1;
+  background-color: @color15;
 }
 
 #battery.critical {
-  background-color: @error;
-  color: @on_error;
+  background-color: @color1;
+  color: @color15;
   animation: blink 0.5s steps(12) infinite alternate;
 }
 
 #battery.charging {
-  background-color: @primary;
-  color: @on_primary;
+  background-color: @color2;
+  color: @color15;
 }
 
 
 /* ============ Custom Power Button ============ */
 #custom-power {
   padding: 0em 0.6em 0em 0em;
-  color: @primary;
+  color: @color3;
 
   font-size: 1.5em;
 }
