solve confilicts in theming

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -32,7 +32,7 @@ em: relevent for the parent element
 /* ============ Base Settings ============ */
 * {
   font-family: "JetBrainsMono Nerd Font";
-  font-size: 1rem;
+  font-size: 14px;
 
 }
 
